--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
-<div></div>
+<div>123</div>
 
   </body>
 </html>
